In-Flight Waypoints 1.2.0
- Correctly detect deactivating navigation.

In-Flight Waypoints 1.1.1
- Hide waypoints when the GUI is hidden (thanks DomDiaemus).
- Take terrain height into account for distance calculations (thanks helaeon).

In-Flight Waypoints 1.1.0
- Always show waypoint if it is activated for navigation.
- Display distance information for the active waypoint.

In-Flight Waypoints 1.0.3
- Fix culling issue that caused waypoints that should've been behind the camera to be drawn.

In-Flight Waypoints 1.0.2
- Include LICENSE.txt in download.

In-Flight Waypoints 1.0.1
- Fixed name in version file.

In-Flight Waypoints 1.0.0
- Initial release.