@@ -1,5 +1,6 @@
 In-Flight Waypoints 1.2.0
 - Correctly detect deactivating navigation.
+- Allow activating/deactivating navigation by clicking on a waypoint (just like in the map view).
 
 In-Flight Waypoints 1.1.1
 - Hide waypoints when the GUI is hidden (thanks DomDiaemus).
